<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.andreygalchevski.veganfuel.screens.foods.FoodsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="16dp"
                android:indeterminate="true"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/custom_progress"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/search_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/search_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/try_typing_soy"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/food_group_text"
                style="@style/spinner_label"
                android:text="@string/food_group"
                app:layout_constraintBottom_toBottomOf="@+id/food_group_spinner"
                app:layout_constraintEnd_toStartOf="@+id/food_group_spinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_text" />

            <Spinner
                android:id="@+id/food_group_spinner"
                style="@style/spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/food_group_text"
                app:layout_constraintTop_toBottomOf="@+id/search_text" />

            <TextView
                android:id="@+id/sort_by_text"
                style="@style/spinner_label"
                android:text="@string/sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/sort_by_spinner"
                app:layout_constraintEnd_toStartOf="@+id/sort_by_spinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_group_text" />

            <Spinner
                android:id="@+id/sort_by_spinner"
                style="@style/spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/sort_by_text"
                app:layout_constraintTop_toBottomOf="@+id/food_group_spinner" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/foods_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sort_by_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

